--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,11 @@ sky:
     database: sky_take_out
     username: root
     password: 12345678
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tKcCUawnnLyZKgwTpvQ
+    access-key-secret: SVu7A5Hvjl87RYHAXezMrjnk46nyAV
+    bucket-name: sky-lailai
+
+
+
