店铺营业状态设置业务功能开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,6 +11,10 @@ sky:
     access-key-id: LTAI5tKcCUawnnLyZKgwTpvQ
     access-key-secret: SVu7A5Hvjl87RYHAXezMrjnk46nyAV
     bucket-name: sky-lailai
+  redis:
+    host: localhost
+    port: 6379
+    database: 10
 
 
 
